fix alignment

--- a/styles/filebar.scss
+++ b/styles/filebar.scss
@@ -81,6 +81,7 @@
 .filebar-wrapper {
   margin-left: 24px;
   margin-bottom: 4px;
+  margin-right: 16px;
   button {
     @include draft-button;
   }
